--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "PTUD_B9_dec11",
+  "name": "PTUD_B9_DEC11",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.31.2",
+    "mkdirp": "^3.0.1",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1"
   }
